--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1406,13 +1406,13 @@ textarea {
 }
 
 a {
-    color: #337ab7;
+    color: white;
     text-decoration: none
 }
 
 a:focus,
 a:hover {
-    color: #23527c;
+    color: #FFF6E5;
     text-decoration: underline
 }
 
@@ -1686,7 +1686,7 @@ mark {
 }
 
 .text-primary {
-    color: #337ab7
+    color: white
 }
 
 a.text-primary:focus,
@@ -1732,7 +1732,7 @@ a.text-danger:hover {
 
 .bg-primary {
     color: #fff;
-    background-color: #337ab7
+    background-color: white
 }
 
 a.bg-primary:focus,
@@ -3792,7 +3792,7 @@ fieldset[disabled] .btn-default:hover {
 
 .btn-primary {
     color: #fff;
-    background-color: #337ab7;
+    background-color: white;
     border-color: #2e6da4
 }
 
@@ -3855,12 +3855,12 @@ fieldset[disabled] .btn-primary.focus,
 fieldset[disabled] .btn-primary:active,
 fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary:hover {
-    background-color: #337ab7;
+    background-color: white;
     border-color: #2e6da4
 }
 
 .btn-primary .badge {
-    color: #337ab7;
+    color: white;
     background-color: #fff
 }
 
@@ -4162,7 +4162,7 @@ fieldset[disabled] .btn-danger:hover {
 
 .btn-link {
     font-weight: 400;
-    color: #337ab7;
+    color: white;
     border-radius: 0
 }
 
@@ -4185,7 +4185,7 @@ fieldset[disabled] .btn-link {
 
 .btn-link:focus,
 .btn-link:hover {
-    color: #23527c;
+    color: #FFF6E5;
     text-decoration: underline;
     background-color: transparent
 }
@@ -4357,7 +4357,7 @@ tbody.collapse.in {
 .dropdown-menu>.active>a:hover {
     color: #fff;
     text-decoration: none;
-    background-color: #337ab7;
+    background-color: white;
     outline: 0
 }
 
@@ -4869,7 +4869,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
 .nav .open>a:focus,
 .nav .open>a:hover {
     background-color: #eee;
-    border-color: #337ab7
+    border-color: white
 }
 
 .nav .nav-divider {
@@ -4981,7 +4981,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
 .nav-pills>li.active>a:focus,
 .nav-pills>li.active>a:hover {
     color: #fff;
-    background-color: #337ab7
+    background-color: white
 }
 
 .nav-stacked>li {
@@ -5708,7 +5708,7 @@ fieldset[disabled] .navbar-inverse .btn-link:hover {
     padding: 6px 12px;
     margin-left: -1px;
     line-height: 1.42857143;
-    color: #337ab7;
+    color: white;
     text-decoration: none;
     background-color: #fff;
     border: 1px solid #ddd
@@ -5732,7 +5732,7 @@ fieldset[disabled] .navbar-inverse .btn-link:hover {
 .pagination>li>span:focus,
 .pagination>li>span:hover {
     z-index: 3;
-    color: #23527c;
+    color: #FFF6E5;
     background-color: #eee;
     border-color: #ddd
 }
@@ -5746,8 +5746,8 @@ fieldset[disabled] .navbar-inverse .btn-link:hover {
     z-index: 2;
     color: #fff;
     cursor: default;
-    background-color: #337ab7;
-    border-color: #337ab7
+    background-color: white;
+    border-color: white
 }
 
 .pagination>.disabled>a,
@@ -5884,7 +5884,7 @@ a.label:hover {
 }
 
 .label-primary {
-    background-color: #337ab7
+    background-color: white
 }
 
 .label-primary[href]:focus,
@@ -5967,7 +5967,7 @@ a.badge:hover {
 
 .list-group-item.active>.badge,
 .nav-pills>.active>a>.badge {
-    color: #337ab7;
+    color: white;
     background-color: #fff
 }
 
@@ -6053,7 +6053,7 @@ a.badge:hover {
 a.thumbnail.active,
 a.thumbnail:focus,
 a.thumbnail:hover {
-    border-color: #337ab7
+    border-color: white
 }
 
 .thumbnail .caption {
@@ -6200,7 +6200,7 @@ a.thumbnail:hover {
     line-height: 20px;
     color: #fff;
     text-align: center;
-    background-color: #337ab7;
+    background-color: white;
     -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
     -webkit-transition: width .6s ease;
@@ -6399,8 +6399,8 @@ button.list-group-item {
 .list-group-item.active:hover {
     z-index: 2;
     color: #fff;
-    background-color: #337ab7;
-    border-color: #337ab7
+    background-color: white;
+    border-color: white
 }
 
 .list-group-item.active .list-group-item-heading,
@@ -6865,26 +6865,26 @@ button.list-group-item-danger.active:hover {
 }
 
 .panel-primary {
-    border-color: #337ab7
+    border-color: white
 }
 
 .panel-primary>.panel-heading {
     color: #fff;
-    background-color: #337ab7;
-    border-color: #337ab7
+    background-color: white;
+    border-color: white
 }
 
 .panel-primary>.panel-heading+.panel-collapse>.panel-body {
-    border-top-color: #337ab7
+    border-top-color: white
 }
 
 .panel-primary>.panel-heading .badge {
-    color: #337ab7;
+    color: white;
     background-color: #fff
 }
 
 .panel-primary>.panel-footer+.panel-collapse>.panel-body {
-    border-bottom-color: #337ab7
+    border-bottom-color: white
 }
 
 .panel-success {
@@ -7682,7 +7682,7 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
+    background-color: #000;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
