--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -17,7 +17,9 @@
     font-size: inherit;
     text-rendering: auto;
     -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
+    -moz-osx-font-smoothing: grayscale;
+    margin-top: 25px;
+    margin-bottom: 40px;
 }
 
 .fa-lg {
