last corrections with w3c validator on html and css files

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3232,6 +3232,13 @@ input[type=search] {
 .form-wrapper {
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (max-width: 767px) {
+    .form-wrapper {
+        margin: 0 20px;
+    }
 }
 
 .form-margin {
@@ -4300,7 +4307,7 @@ tbody.collapse.in {
     margin-left: 2px;
     vertical-align: middle;
     border-top: 4px dashed;
-    border-top: 4px solid\9;
+    border-top: 4px solid;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent
 }
@@ -4387,7 +4394,6 @@ tbody.collapse.in {
     cursor: not-allowed;
     background-color: transparent;
     background-image: none;
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false)
 }
 
 .open>.dropdown-menu {
@@ -5138,7 +5144,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
     max-height: 340px
 }
 
-@media (max-device-width:480px) and (orientation:landscape) {
+@media (max-width:480px) and (orientation:landscape) {
     .navbar-fixed-bottom .navbar-collapse,
     .navbar-fixed-top .navbar-collapse {
         max-height: 200px
